samples/_failures_safe/1761415717_db5493_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7aa5398e.c: In function ‘main’:
./samples/SAFE/__tmp_7aa5398e.c:146:9: error: expected declaration or statement at end of input
  146 |         if (filter_level == -1) {
      |         ^~
./samples/SAFE/__tmp_7aa5398e.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7aa5398e.c:146:9: error: expected declaration or statement at end of input
